--- a/client/src/style.scss
+++ b/client/src/style.scss
@@ -1,8 +1,16 @@
 $lightGreen: #b9e7e7;
 
 .app {
+  display: flex;
+  justify-content: center;
 }
 .container {
+  width: 1024px;
+
+  .link {
+    text-decoration: none;
+    color: inherit;
+  }
 }
 
 // LOGIN & REGISTER
@@ -51,6 +59,55 @@ $lightGreen: #b9e7e7;
     span {
       font-size: 12px;
       text-align: center;
+    }
+  }
+}
+
+// NAVBAR
+.navbar {
+  .container {
+    padding: 10px 0;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+
+    .logo {
+      img {
+        width: 120px;
+      }
+    }
+
+    .links {
+      display: flex;
+      align-items: center;
+      gap: 10px;
+    }
+
+    h6 {
+      font-size: 16px;
+      font-weight: 300;
+    }
+
+    span {
+      cursor: pointer;
+    }
+
+    .write {
+      background-color: $lightGreen;
+      width: 50px;
+      height: 50px;
+      border-radius: 50%;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      font-weight: 300;
+      border: 1px solid #fff;
+
+      &:hover {
+        color: teal;
+        background-color: #fff;
+        border: 1px solid teal;
+      }
     }
   }
 }
