--- a/client/src/style.scss
+++ b/client/src/style.scss
@@ -128,62 +128,164 @@ footer {
 }
 
 // HOME
-.home {
-  .posts {
-    margin-top: 50px;
+
+.posts {
+  margin-top: 50px;
+  display: flex;
+  flex-direction: column;
+  gap: 150px;
+
+  .post {
+    display: flex;
+    gap: 100px;
+
+    &:nth-child(2n + 1) {
+      flex-direction: row-reverse;
+    }
+  }
+
+  .img {
+    flex: 2;
+    position: relative;
+
+    &::after {
+      content: '';
+      width: 100%;
+      height: 100%;
+      background-color: $lightGreen;
+      position: absolute;
+      top: 20px;
+      left: -20px;
+      z-index: -1;
+    }
+  }
+
+  img {
+    width: 100%;
+    max-height: 400px;
+    object-fit: cover;
+  }
+
+  .content {
+    flex: 3;
     display: flex;
     flex-direction: column;
-    gap: 150px;
+    justify-content: space-between;
+  }
 
-    .post {
-      display: flex;
-      gap: 100px;
+  h1 {
+    font-size: 48px;
+  }
 
-      &:nth-child(2n + 1) {
-        flex-direction: row-reverse;
-      }
+  p {
+    font-size: 18px;
+  }
+
+  button {
+    width: max-content;
+    padding: 10px 20px;
+    border: none;
+    cursor: pointer;
+    background-color: #fff;
+    border: 1px solid teal;
+    color: teal;
+
+    &:hover {
+      border: 1px solid white;
+      background-color: $lightGreen;
+      color: black;
     }
+  }
+}
 
-    .img {
-      flex: 2;
-      position: relative;
+// SINGLE
+.signle {
+  display: flex;
+  gap: 50px;
 
-      &::after {
-        content: '';
-        width: 100%;
-        height: 100%;
-        background-color: $lightGreen;
-        position: absolute;
-        top: 20px;
-        left: -20px;
-        z-index: -1;
-      }
-    }
+  .content {
+    flex: 5;
+    display: flex;
+    flex-direction: column;
+    gap: 30px;
+  }
+
+  img {
+    width: 100%;
+    height: 300px;
+    object-fit: cover;
+  }
+
+  .user {
+    display: flex;
+    align-items: center;
+    gap: 10px;
+    font-size: 14px;
 
     img {
-      width: 100%;
-      max-height: 400px;
+      width: 50px;
+      height: 50px;
+      border-radius: 50%;
       object-fit: cover;
     }
 
-    .content {
-      flex: 3;
-      display: flex;
-      flex-direction: column;
-      justify-content: space-between;
+    span {
+      font-weight: bold;
+    }
+  }
+
+  .edit {
+    display: flex;
+    gap: 5px;
+
+    img {
+      width: 20px;
+      height: 20px;
+      cursor: pointer;
+    }
+  }
+
+  h1 {
+    font-size: 42px;
+    color: #333;
+  }
+
+  p {
+    text-align: justify;
+    line-height: 30px;
+  }
+}
+
+// MENU
+.menu {
+  flex: 2;
+  display: flex;
+  flex-direction: column;
+  gap: 25px;
+
+  h1 {
+    font-size: 20px;
+    color: #555;
+  }
+
+  .post {
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+
+    img {
+      width: 100%;
+      height: 200px;
+      object-fit: cover;
     }
 
-    h1 {
-      font-size: 48px;
-    }
-
-    p {
-      font-size: 18px;
+    h2 {
+      color: #555;
     }
 
     button {
       width: max-content;
-      padding: 10px 20px;
+      padding: 7.5px 15px;
       border: none;
       cursor: pointer;
       background-color: #fff;
